5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1811_2564.log
== TEST (2019-06-11 19:07:57) 
-- CODE:
from numpy import*
golspro= array(evalinput(("vetor de gols efetuado pelo time do iferno : ")))
golscont= array(eval(input("vetor de gols contra: ")))
i = 0
vitoria=0
empate= 0
derrota= 0
for v in golspro:
	if (golspro[i]>golscont[i]):
		vitoria= vitoria + 1
		i = i + 1
	elif (golspro[i]==golscont[i]):
		empate= empate + 1
		i = i + 1
	elif (golspro[i]<golscont[i]):
		derrota= derrota + 1
		i = i + 1
resultados= zeros,(3, dtipy=int)
resultados[0]==vitoria
resultados[1]==empates
resultados[2]==derrota
print(resultados)
-- ERROR:
File "XXXX", line 18
    resultados= zeros,(3, dtipy=int)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:08:05) 
-- CODE:
from numpy import*
golspro= array(evalinput(("vetor de gols efetuado pelo time do iferno : ")))
golscont= array(eval(input("vetor de gols contra: ")))
i = 0
vitoria=0
empate= 0
derrota= 0
for v in golspro:
	if (golspro[i]>golscont[i]):
		vitoria= vitoria + 1
		i = i + 1
	elif (golspro[i]==golscont[i]):
		empate= empate + 1
		i = i + 1
	elif (golspro[i]<golscont[i]):
		derrota= derrota + 1
		i = i + 1
resultados= zeros(3, dtipy=int)
resultados[0]==vitoria
resultados[1]==empates
resultados[2]==derrota
print(resultados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:08:14) 
-- CODE:
from numpy import*
golspro= array(eval(input(("vetor de gols efetuado pelo time do iferno : ")))
golscont= array(eval(input("vetor de gols contra: ")))
i = 0
vitoria=0
empate= 0
derrota= 0
for v in golspro:
	if (golspro[i]>golscont[i]):
		vitoria= vitoria + 1
		i = i + 1
	elif (golspro[i]==golscont[i]):
		empate= empate + 1
		i = i + 1
	elif (golspro[i]<golscont[i]):
		derrota= derrota + 1
		i = i + 1
resultados= zeros(3, dtipy=int)
resultados[0]==vitoria
resultados[1]==empates
resultados[2]==derrota
print(resultados)
-- ERROR:
File "XXXX", line 3
    golscont= array(eval(input()))
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:08:34) 
-- CODE:
from numpy import*
golspro= array(eval(input("vetor de gols efetuado pelo time do iferno : ")))
golscont= array(eval(input("vetor de gols contra: ")))
i = 0
vitoria=0
empate= 0
derrota= 0
for v in golspro:
	if (golspro[i]>golscont[i]):
		vitoria= vitoria + 1
		i = i + 1
	elif (golspro[i]==golscont[i]):
		empate= empate + 1
		i = i + 1
	elif (golspro[i]<golscont[i]):
		derrota= derrota + 1
		i = i + 1
resultados= zeros(3, dtipy=int)
resultados[0]==vitoria
resultados[1]==empates
resultados[2]==derrota
print(resultados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:10:02) 
-- CODE:
from numpy import*
golspro= array(eval(input("vetor de gols efetuado pelo time do iferno : ")))
golscont= array(eval(input("vetor de gols contra: ")))
i = 0
vitoria=0
empate= 0
derrota= 0
for v in golspro:
	if (golspro[i]>golscont[i]):
		vitoria= vitoria + 1
		i = i + 1
	elif (golspro[i]==golscont[i]):
		empate= empate + 1
		i = i + 1
	elif (golspro[i]<golscont[i]):
		derrota= derrota + 1
		i = i + 1
resultados= zeros(3, dtype=int)
resultados[0]==vitoria
resultados[1]==empates
resultados[2]==derrota
print(resultados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:10:33) 
-- CODE:
from numpy import*
golspro= array(eval(input("vetor de gols efetuado pelo time do iferno : ")))
golscont= array(eval(input("vetor de gols contra: ")))
i = 0
vitoria=0
empate= 0
derrota= 0
for v in golspro:
	if (golspro[i]>golscont[i]):
		vitoria= vitoria + 1
		i = i + 1
	elif (golspro[i]==golscont[i]):
		empate= empate + 1
		i = i + 1
	elif (golspro[i]<golscont[i]):
		derrota= derrota + 1
		i = i + 1
resultados= zeros(3, dtype=int)
resultados[0]==vitoria
resultados[1]==empate
resultados[2]==derrota
print(resultados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:11:41) 
-- CODE:
from numpy import*
golspro= array(eval(input("vetor de gols efetuado pelo time do iferno : ")))
golscont= array(eval(input("vetor de gols contra: ")))
i = 0
vitoria=0
empate= 0
derrota= 0
for v in golspro:
	if (golspro[i]>golscont[i]):
		vitoria= vitoria + 1
		i = i + 1
	elif (golspro[i]==golscont[i]):
		empate= empate + 1
		i = i + 1
	elif (golspro[i]<golscont[i]):
		derrota= derrota + 1
		i = i + 1
	resultados= zeros(3, dtype=int)
	resultados[0]==vitoria
	resultados[1]==empate
	resultados[2]==derrota
print(resultados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:12:45) 
-- CODE:
from numpy import*
golspro= array(eval(input("vetor de gols efetuado pelo time do iferno : ")))
golscont= array(eval(input("vetor de gols contra: ")))
i = 0
vitoria=0
empate= 0
derrota= 0
for v in golspro:
	if (golspro[i]>golscont[i]):
		vitoria= vitoria + 1
		i = i + 1
	elif (golspro[i]==golscont[i]):
		empate= empate + 1
		i = i + 1
	elif (golspro[i]<golscont[i]):
		derrota= derrota + 1
		i = i + 1
resultados= zeros(3, dtype=int)
resultados[0]==vitoria
resultados[1]==empate
resultados[2]==derrota
print(vitoria)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:13:52) 
-- CODE:
from numpy import*
golspro= array(eval(input("vetor de gols efetuado pelo time do iferno : ")))
golscont= array(eval(input("vetor de gols contra: ")))
i = 0
vitoria=0
empate= 0
derrota= 0
for v in golspro:
	if (golspro[i]>golscont[i]):
		vitoria= vitoria + 1
		i = i + 1
	elif (golspro[i]==golscont[i]):
		empate= empate + 1
		i = i + 1
	elif (golspro[i]<golscont[i]):
		derrota= derrota + 1
		i = i + 1
resultados= zeros(3, dtype=int)
resultados[0]=vitoria
resultados[1]=empate
resultados[2]=derrota
print(resultados)
-- EXECUTION TIME:
1.02684
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
